Class.newInstance() is depreciated in Java 9